feat: Get user by id Update OpenAPI contract Introduce ResourceNotFoundException
