# users-management-api/src/main/java/io/florianlopes/usersmanagement/api/users/domain/adapter/UserAdapter.java
@@ -1,5 +1,7 @@
 package io.florianlopes.usersmanagement.api.users.domain.adapter;
 
+import java.util.Optional;
+
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 
@@ -10,4 +12,6 @@ public interface UserAdapter {
     User createUser(User user);
 
     Page<User> getAllUsers(Pageable pageable);
+
+    Optional<User> getUserById(String id);
 }
