# users-management-api/src/main/java/io/florianlopes/usersmanagement/api/users/domain/usecase/GetUserUseCase.java
@@ -1,0 +1,8 @@
+package io.florianlopes.usersmanagement.api.users.domain.usecase;
+
+import io.florianlopes.usersmanagement.api.users.domain.model.User;
+
+public interface GetUserUseCase {
+
+    User getUserById(String id);
+}
